# core-nest

./: .env.sample  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: provider-health.yml
alembic/versions/: e8298e6c0974_initial_migration.py
api/controllers/: api_controller.py  completion_controller.py  embeddings_controller.py  sentiment_controller.py  summarization_controller.py
api/routes/: __init__.py
api/validators/: completion_validator.py  embedding_validator.py  sentiment_validator.py  summarization_validator.py
app/adapters/: __init__.py  base_adapter.py  cerebras_adapter.py  google_adapter.py  groq_adapter.py  huggingface_adapter.py  minstral_adapter.py  mistral_adapter.py  openai_adapter.py  openrouter_adapter.py
app/api/: __init__.py  dependencies.py
app/api/controllers/: __init__.py  _helpers.py  completions.py  embeddings.py  sentiments.py  summaries.py
app/api/core/: __init__.py  _helpers.py  factory.py  lifespan.py  middleware.py  routes.py  startup_checks.py  uvicorn.py
app/api/dependencies/: __init__.py  auth.py  db_session.py  rate_limiter.py
app/api/endpoints/: __init__.py  completion.py  completions.py  embeddings.py  sentiment.py  sentiments.py  summaries.py  summarize.py
app/api/schemas/: __init__.py  client_schemas.py  completion_schemas.py  embedding_schemas.py  sentiment_schemas.py  summarization_schemas.py
app/api/services/: __init__.py  _helpers.py  base.py  (+9 more)
app/config/: api_managed_params.yaml  constants.py  llm_providers.yaml  logger.py  postgres.py  provider_policy.yaml  redis.py
app/db/: __init__.py  database.py  events.py
app/utils/: constants.py  providers.yaml
config/: logger.py
db/models/: __init__.py  api_logs.py
lib/cache/: __init__.py  store.py
lib/llm/: providers.yaml
lib/tasks/: __init__.py  daily_tasks.py  dev_tasks.py  one_time_tasks.py
lib/utils/: audit_cleanup.py  cache_invalidation.py  create_client.py  provider_health.py
utils/: constants.py
utils/helpers/: api_logger.py  fastapi_lifespan.py  model_loader.py
(+58 files in other folders)
